# F__K_UI

./: .gitignore  ANIMATION_TYPES_USAGE.md  BORDER_ZERO_THICKNESS_FIX.md  BUTTON_COLOR_FIX_SUMMARY.md  BUTTON_FIX_SUMMARY_中文.md  BUTTON_LAYOUT_FIX_SUMMARY.md  BUTTON_RENDER_VERIFICATION.md  BUTTON_VISUAL_STATES_INTEGRATION.md  CHANGELOG.md  CMakeLists.txt  COORDINATE_CLARIFICATION.md  DIAGNOSIS_REPORT.md  FONT_HEIGHT_EXPLANATION.md  GRID_COMPLETE_IMPLEMENTATION.md  GRID_DEMO_GUIDE.md  GRID_QUICK_REFERENCE.md  GRID_WPF_API_SUMMARY.md  GRID_WPF_STYLE_API.md  INSTALL.md  MARGIN_CLARIFICATION.md  MARGIN_DESIGN_ISSUE.md  MARGIN_DOUBLE_COUNT_ANALYSIS.md  MODULES.md  PROJECT_STRUCTURE.md  PROPERTY_MACROS_REFACTORING.md  PR_SUMMARY_中文.md  README.md  SCROLLBAR_TEMPLATE_MIGRATION_PLAN.md  SPACING_EXPLANATION.md  STACKPANEL_FIX.md  X_NAME_使用指南.md  border_stroke_combined.diff  debug_layout.cpp  debug_render.cpp  demo_border_alignment.cpp  demo_button_color_fix.cpp  demo_panel_backgrounds.cpp  detailed_spacing_test.cpp  emoji_debug.txt  example_grid_showcase.cpp  (+55 more)
Docs/: API-Consistency-Check.md  API-Design-Issues.md  API-Reference.md  AllControlsBindingSupport.md  Architecture.md  BUTTON_VISUAL_STATES_INTEGRATION.md  BindingMacros-Refactoring-Report.md  BindingOptimization-Summary.md  BindingSupport-CompletionCheck.md  BindingSupport-FinalReport.md  BindingSupport-Implementation-Guide.md  BindingSystem-Statistics.md  Button.md  ButtonRenderImplementation.md  CLIPPING_REFACTOR_STATUS.md  CONTENTCONTROL_RENDER_FLOW.md  CORRECT_MARGIN_PADDING_DESIGN.md  CUSTOM_VISUAL_STATES_GUIDE.md  ChainableBindingSyntax.md  ChainableBindingSyntax.md.bak  ControlTemplate-Implementation.md  DATACONTEXT_FIX.md  DOCS_INDEX.md  DOCUMENTATION_PLAN.md  DUPLICATE_NAMES_行为说明.md  DependencyProperty-Migration-Guide.md  DependencyProperty-Refactoring-Plan.md  DependencyPropertyMacros-Guide.md  Development-Plan.md  Development.md  DevelopmentPlan.md  ELEMENTNAME_作用域解析.md  EMOJI_COLOR_SUPPORT.md  FINAL_FIX_VERIFICATION.md  FIX_NOTES.md  Fluent-API-Refactoring.md  GRID_API_REFERENCE.md  GRID_DOCS_CHECKLIST.md  GRID_DOCS_INDEX.md  GRID_IMPLEMENTATION_SUMMARY.md  (+46 more)
Docs/API/: App.md  Binding.md  COMPLETION_REPORT.md  COMPLETION_REPORT_V2.md  Core.md  README.md  Render.md  UI.md
Docs/Archive/: ISSUE_CLARIFICATION.md
Docs/Designs/: Architecture-Refactoring.md  ChainableContentAPI.md  ChildrenBatchAPI.md  Memory-Management-Strategy.md  NestedChainingStyle.md  UI-Refactor-Architecture.md  Window-Implementation.md  app模块设计.md  binding模块设计.md  core模块类设计.md  core模块设计.md  render模块类设计.md  render模块设计.md  theme模块设计.md  ui模块类设计.md  ui模块设计.md  实现路线计划.md  最初设计.md  链式UI框架设计.md
Docs/Guides/: DataTemplate使用指南.md  ELEMENTNAME_BINDING_说明.md  Linux-Build-Guide.md  POINTER_CAPTURE_AND_TIMER.md  POINTER_CAPTURE_API.md  SHAPE_GUIDE.md  TESTING_GUIDE.md  TOGGLEBUTTON_TEMPLATE_GUIDE.md  X_NAME_使用指南.md  键盘事件和焦点管理说明.md  鼠标事件验证说明.md
Docs/Tasks/: POPUP_REFACTOR_TASKS.md  Phase2.1-StyleIntegration.md  Phase2.2-ContentPresenter.md  Phase2.2.1-TemplateProperty.md  Phase2.3-ConcreteShapes.md  Phase2.4-ItemContainerGenerator.md  Phase2.5-ItemsControlIntegration.md  Phase2.6-ListBox.md  Phase3.1-AdvancedShapes.md
cmake/: CheckGitStatus.cmake  FK_UIConfig.cmake.in
docs/: GIT_STATUS_CHECK.md  GIT_STATUS_CHECK_IMPLEMENTATION_SUMMARY.md
examples/: FrameworkElement_refactored_example.h  README.md  README_Window.md  animation_demo.cpp  arc_demo.cpp  async_binding_demo.cpp  binding_debug_test.cpp  binding_modes_demo.cpp  binding_validation_demo.cpp  brush_system_demo.cpp  button_custom_visual_states_demo.cpp  button_direct_render.cpp  button_example.cpp  button_new_features_demo.cpp  button_render_test.cpp  button_visual_states_simple_test.cpp  checkbox_test.cpp  children_api_demo.cpp  combobox_demo.cpp  contentpresenter_demo.cpp  duplicate_names_test.cpp  elementname_binding_demo.cpp  elementname_scope_demo.cpp  findname_demo.cpp  fluent_api_demo.cpp  fluent_binding_demo.cpp  gradient_brush_demo.cpp  image_demo.cpp  itemscontrol_demo.cpp  keyframe_animation_demo.cpp  listbox_demo.cpp  main.cpp  main_backup.cpp  main_new.cpp  main_wpf_style.cpp  multibinding_auto_update_demo.cpp  multibinding_demo.cpp  multicolor_path_test.cpp  name_scope_demo.cpp  namescope_performance_demo.cpp  (+34 more)
examples/basic/: border_test.cpp  clip_test.cpp  constraint_test.cpp  main.cpp  radiobutton_demo.cpp  repeatbutton_demo.cpp  scrollviewer_demo.cpp
examples/datatemplate/: README.md  datatemplate_demo.cpp
examples/demos/: complex_layout_demo.cpp
examples/path/: arc_demo.cpp  multicolor_path_test.cpp  multicolor_simple_test.cpp  path_line_test.cpp  path_test.cpp  simple_arc_test.cpp  subpath_fill_test.cpp  sweep_test.cpp
examples/popup/: coordinate_test.cpp  popup_animation_test.cpp  popup_boundary_test.cpp  popup_input_test.cpp  popup_placement_test.cpp  popup_staysopen_test.cpp  popup_test.cpp  popuproot_test.cpp  popupservice_test.cpp
examples/shapes/: shape_demo.cpp  shape_test.cpp  star_test.cpp
include/: Control.h  Event.h
include/fk/: Application  Collections  Controls  DataBinding  FK_UI.h  Graphics  Input  Layouts  Rendering  Styling
samples/: README.md
samples/binding_syntax_demo/: CMakeLists.txt  README.md
samples/binding_syntax_demo/src/: main.cpp
samples/hello_fk_ui/: CMakeLists.txt  README.md
samples/hello_fk_ui/src/: main.cpp
samples/template_demo/: CMakeLists.txt  main.cpp
samples/textbox_wrapping_demo/: CMakeLists.txt  README.md  main.cpp
src/: Application.cpp  Application.h  Window.cpp  Window.h
src/animation/: AnimationClock.cpp  AnimationManager.cpp  ColorAnimation.cpp  DoubleAnimation.cpp  PointAnimation.cpp  Storyboard.cpp  ThicknessAnimation.cpp  Timeline.cpp  VisualStateBuilder.cpp  VisualStateManager.cpp
src/app/: Application.cpp
src/binding/: Binding.cpp  BindingContext.cpp  BindingExpression.cpp  BindingPath.cpp  DependencyObject.cpp  DependencyProperty.cpp  MultiBinding.cpp  MultiBindingExpression.cpp  PropertyStore.cpp  ValueConverters.cpp
src/core/: Clock.cpp  Dispatcher.cpp  Logger.cpp  Timer.cpp
src/ui/: Border.cpp  (+51 more)
(+459 files in other folders)
